--- a/api/evento/models/evento.settings.json
+++ b/api/evento/models/evento.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "eventos",
   "info": {
-    "name": "Evento"
+    "name": "Evento",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -35,6 +36,9 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "reunion": {
+      "type": "string"
     }
   }
 }
